fixed wird white box issue on safari

--- a/client/src/components/Chat.css
+++ b/client/src/components/Chat.css
@@ -56,7 +56,8 @@
 }
 
 .chat__body::-webkit-scrollbar { 
-  width: 0 !important 
+  width: 0 !important;
+  display: none;
 }
 
 .chat__message {
